--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,50 @@ input{
     padding: 13px;
     color: rgba(70, 66, 66, 0.836);
 }
+.Tow_Component_Main{
+    background-color: rgba(235, 243, 248, 0.877);
+    padding: 50px;
+    /* margin-top: 50px; */
+    
+}
+.Tow_Component_link{
+    color: black;
+}
+.Tow_Component_link:hover{
+    color: red;
+}
+.Three_Component_text_Main{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+.Three_Component_last{
+    color: black;
+    text-decoration: none;
+
+}
+.Three_Component_last:hover{
+    color: red;
+}
+.Three_Component_Last_btn{
+    all: unset;
+    border: 1px solid red;
+    padding: 13px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 20px;
+}
+.Three_Component_Last_btn:hover{
+    background-color: red;
+    color: white;
+}
+.btn0{
+    border:1px solid rgb(185, 179, 179);
+}
+
+.btn{
+    all: unset;
+    text-align: center;
+    margin-inline: 100px;   
+}
